// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TokenBadge RTL snapshots > renders in LTR 1`] = `
<div>
  <span
    aria-label="blue star"
    class="inline-flex items-center rounded-full px-3 py-2 gap-2 text-base font-semibold "
    role="img"
    style="background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); direction: ltr;"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="32"
      style="direction: ltr;"
      viewBox="0 0 24 24"
      width="32"
    >
      <path
        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
      />
    </svg>
  </span>
</div>
`;

exports[`TokenBadge RTL snapshots > renders in RTL 1`] = `
<div>
  <span
    aria-label="blue star"
    class="inline-flex items-center rounded-full px-3 py-2 gap-2 text-base font-semibold "
    role="img"
    style="background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); direction: ltr;"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="32"
      style="direction: ltr;"
      viewBox="0 0 24 24"
      width="32"
    >
      <path
        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
      />
    </svg>
  </span>
</div>
`;

exports[`TokenCard RTL snapshots > renders in LTR 1`] = `
<div>
  <div
    class="token-card flex flex-col items-center justify-center border-2 border-border rounded-lg p-6 bg-card"
    data-testid="token-card"
    style="width: 3in; height: 2in;"
  >
    <span
      aria-label="blue star"
      class="inline-flex items-center rounded-full px-6 py-4 gap-3 text-2xl font-semibold "
      role="img"
      style="background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); direction: ltr;"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="64"
        style="direction: ltr;"
        viewBox="0 0 24 24"
        width="64"
      >
        <path
          d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
        />
      </svg>
    </span>
    <p
      class="mt-3 text-lg font-bold text-foreground"
    >
      Blue Star
    </p>
    <p
      class="mt-1 text-sm text-muted-foreground"
    >
      #
      1
    </p>
  </div>
</div>
`;

exports[`TokenCard RTL snapshots > renders in RTL 1`] = `
<div>
  <div
    class="token-card flex flex-col items-center justify-center border-2 border-border rounded-lg p-6 bg-card"
    data-testid="token-card"
    style="width: 3in; height: 2in;"
  >
    <span
      aria-label="blue star"
      class="inline-flex items-center rounded-full px-6 py-4 gap-3 text-2xl font-semibold "
      role="img"
      style="background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); direction: ltr;"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="64"
        style="direction: ltr;"
        viewBox="0 0 24 24"
        width="64"
      >
        <path
          d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
        />
      </svg>
    </span>
    <p
      class="mt-3 text-lg font-bold text-foreground"
    >
      Blue Star
    </p>
    <p
      class="mt-1 text-sm text-muted-foreground"
    >
      #
      1
    </p>
  </div>
</div>
`;
